feat(terminal): Implement Smart Network Monitor and Unified Offline State - Add ConnectivityService with real-time network monitoring (5s interval) - Unified offline state combines login mode and network status - Dynamic UI with AppBar and buttons reacting to network changes - Amber-themed offline indicators for visual consistency - Automatic sync on reconnection - Cache-first patterns for search and history screens - Reduced font sizes and FittedBox for overflow prevention - Offline merchant queue with update merging - Backend phone duplicate check removed (NFC only)

--- a/terminal_pos_android/pubspec.yaml
+++ b/terminal_pos_android/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   decimal: ^2.3.3
   nfc_manager: ^3.3.0
   device_info_plus: ^10.1.0
+  crypto: ^3.0.3
 
 dev_dependencies:
   flutter_test:
