--- a/terminal_pos_android/pubspec.yaml
+++ b/terminal_pos_android/pubspec.yaml
@@ -44,6 +44,7 @@ dependencies:
   nfc_manager: ^3.3.0
   device_info_plus: ^10.1.0
   crypto: ^3.0.3
+  uuid: ^4.5.2
 
 dev_dependencies:
   flutter_test:
