--- a/frontend-next/package.json
+++ b/frontend-next/package.json
@@ -31,6 +31,7 @@
     "lucide-react": "^0.559.0",
     "next": "16.0.8",
     "next-themes": "^0.4.6",
+    "qrcode.react": "^4.2.0",
     "react": "^19.2.1",
     "react-dom": "19.2.1",
     "recharts": "^3.5.1",
