--- a/terminal_pos_android/pubspec.yaml
+++ b/terminal_pos_android/pubspec.yaml
@@ -16,7 +16,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
 # In Windows, build-name is used as the major, minor, and patch parts
 # of the product and file versions while build-number is used as the build suffix.
-version: 1.0.0+1
+version: 1.0.40+11
 
 environment:
   sdk: ^3.10.3
@@ -47,6 +47,8 @@ dependencies:
   uuid: ^4.5.2
   qr_flutter: ^4.1.0          # QR code generation for receipts
   mobile_scanner: ^5.1.1      # Camera-based QR scanning
+  path_provider: ^2.1.0       # APK storage for updates
+  package_info_plus: ^8.0.0   # Get current app version
 
 dev_dependencies:
   flutter_test:
